# cpp-bindings-windows

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/actions/: setup_and_configure_cmake.yml
.github/actions/build_binary_and_export_env/: action.yml
.github/actions/check_valid_semver_tag/: action.yml
.github/actions/setup_and_configure_cmake/: action.yml
.github/workflows/: build-deno-dll.yml  build.yml  build_binary.yml  ci.yml  cpp-tests.yml  deno-tests.yml  deno_tests.yml  new_release.yml  on_push.yml  on_tag.yml  publish-jsr.yml  publish_jsr.yml  test_unit_cpp.yml
cmake/toolchains/: mingw64.cmake
examples/: serial_advanced.ts  serial_echo.ts
integration_tests/: .gitignore  deno.json  ffi_bindings.ts  integration_test.ts
jsr/: .gitignore  LICENSE  README.md  jsr.json
jsr/package/: README.md  jsr.json  jsr.json.in
jsr/scripts/: binary_to_json.ps1  embed_binary.ps1  embed_binary.sh  set_version.ps1
src/: main.cpp  serial.cpp  serial.h  serial_close.cpp  serial_close.test.cpp  serial_get_baudrate.cpp  serial_get_cts.cpp  serial_get_data_bits.cpp  serial_get_dcd.cpp  serial_get_dsr.cpp  serial_get_flow_control.cpp  serial_get_parity.cpp  serial_get_ri.cpp  serial_get_stop_bits.cpp  serial_monitor_ports.cpp  serial_open.cpp  serial_open.test.cpp  serial_ports_info.cpp  serial_read.cpp  serial_read.test.cpp  serial_send_break.cpp  serial_set_baudrate.cpp  serial_set_data_bits.cpp  serial_set_dtr.cpp  serial_set_flow_control.cpp  serial_set_parity.cpp  serial_set_rts.cpp  serial_set_stop_bits.cpp  serial_write.cpp  serial_write.test.cpp  test.cpp  version_config.cpp
src/detail/: win32_helpers.hpp
src/test_helpers/: error_capture.cpp  error_capture.hpp
tests/: integration.test.cpp  serial_arduino.test.cpp  serial_test.cpp  serial_unit_tests.cpp  test_serial_arduino.cpp
versioning/: version_config.cpp.in  version_config.h.in
